# analytics-agent-duckdb-workshop

./: .gitignore  404.html  README.md  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  _not-found.txt  context.html  duckdb.html  index.html  index.txt  loop.html  loop.txt  mcp.html  setup.html  setup.txt  tools.html  wrapup.html  wrapup.txt
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh  post-start.sh
404/: index.html
_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt  index.html  index.txt
context/: __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  __next.context.__PAGE__.txt  __next.context.txt  index.html  index.txt
duckdb/: __next._full.txt  __next._head.txt  __next._tree.txt  __next.duckdb.__PAGE__.txt  __next.duckdb.txt  index.html  index.txt
loop/: __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  __next.loop.__PAGE__.txt  __next.loop.txt  index.html  index.txt
mcp/: __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  __next.mcp.__PAGE__.txt  __next.mcp.txt  index.html  index.txt
setup/: __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  __next.setup.__PAGE__.txt  __next.setup.txt  index.html  index.txt
site/: mdx-components.tsx  next.config.ts  (+2 more)
workshop/: .env.example  Makefile  pyproject.toml  skill.md
workshop/solutions/: add_comments.sql  agent_loop.py  agent_loop_with_skill.py  agent_mcp.py  agent_tools.py
(+835 files in other folders)
