[project]
name = "pycon-workshop"
version = "0.1.0"
description = "SQL is Dead, Long Live SQL — PyCon DE & PyData 2026 Workshop"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.5.1",
    "anthropic>=0.93.0",
    "pydantic-ai>=1.79.0",
    "fastmcp>=2.14.6",
    "openai>=2.31.0",
    "python-dotenv>=1.1.0",
]
